# ring-campaign

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  upgrade.sh
docs/: system.puml
programs/contracts/: Cargo.toml
programs/contracts/src/: lib.rs
programs/datafarm/: Cargo.toml
programs/datafarm/src/: account.rs  context.rs  error.rs  lib.rs
programs/ringfi/: Cargo.toml
programs/ringfi/src/: account.rs  context.rs  error.rs  lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
tests/: contracts-old.js  contracts.js  init.js
tests/helper/: admin.json  architect.json  builder.json  index.js  validator.json
