[package]
name = "contracts"
version = "0.1.0"
description = "Created by Seyed Hadi Hosseini im.perlish@gmail.com"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.15.0"
anchor-spl= "0.15.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
