[package]
name = "ringfi"
version = "0.1.0"
description = "Created by anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "ringfi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

